style: enhance login form layout and button styles for improved user experience

--- a/templates/index.prod.html
+++ b/templates/index.prod.html
@@ -39,7 +39,7 @@
       href="{{ url_for('static', filename='apple-touch-icon.png') }}"
     />
   </head>
-  <body>
+  <body class="max-w-7xl mx-auto p-5 bg-secondary-50" style="font-family: 'Inter', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;">
     <div id="root"></div>
     <script src="{{ url_for('static', filename='js/app.min.js') }}"></script>
   </body>
