--- a/templates/login.prod.html
+++ b/templates/login.prod.html
@@ -39,7 +39,7 @@
       href="{{ url_for('static', filename='apple-touch-icon.png') }}"
     />
   </head>
-  <body>
+  <body class="bg-secondary-50" style="font-family: 'Inter', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;">
     <div id="root"></div>
     <script src="{{ url_for('static', filename='js/login.min.js') }}"></script>
   </body>
